# cpp_playground

./: CMakeLists.txt  flake.nix  fold.cpp
